Remove emoji from app header title

--- a/nem-dashboard-frontend/public/index.html
+++ b/nem-dashboard-frontend/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="NEM Market Dashboard - Live prices and interconnector flows"
     />
-    <title>⚡ NEM Market Dashboard</title>
+    <title>NEM Market Dashboard</title>
     <style>
       body {
         margin: 0;
